Fix bug with nav visibility/height

--- a/responsive-web-design/build-a-personal-portfolio-webpage/personal-portfolio-webpage.css
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/personal-portfolio-webpage.css
@@ -159,7 +159,6 @@ main>section>h1:first-child {
     z-index: 100;
     width: 100%;
     background-color: #393939;
-    /* visibility: hidden; */
     height: 0;
     overflow: hidden;
     padding-bottom: 5px;
@@ -195,7 +194,6 @@ main>section>h1:first-child {
 
 .nav-visible {
     height: 152px !important;
-    /* visibility: visible !important; */
 }
 
 img#self-photo {
@@ -397,16 +395,15 @@ div.skill>img,
         display: none;
     }
 
-    #navbar nav {
+    #nav {
         position: static;
         width: 100%;
         background: none;
         box-shadow: none;
-        visibility: hidden;
         justify-self: end;
         width: 100%;
         max-width: 500px;
-        visibility: visible;
+        height: var(--top-header-height);
     }
 
     #navbar nav>ul {
